# photo_renamer

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
src/: config.rs
